test/TestSuite/Syntax/Errors/min_timing_res.tjp
project test "Test" "1.0" 2007-03-25 +2m {
# MARK: error 3 min_timing_res	
	timingresolution 4min
}

